--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
     "next": "^13.4.12",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-katex": "^3.0.1",
     "typescript": "^5.2.2"
+  },
+  "devDependencies": {
+    "@types/react-katex": "^3.0.0"
   }
 }
