--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@astrojs/check": "^0.9.3",
     "@astrojs/mdx": "^3.1.6",
     "astro": "^4.15.5",
+    "rehype-katex": "^7.0.1",
+    "remark-math": "^6.0.0",
     "typescript": "^5.6.2"
   }
 }
