--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ glob = "0.3.3"
 markdown = "1.0.0"
 serde = { version = "1.0.228", features = ["derive"] }
 serde_yaml = "0.9.34"
+syntect = "5.3.0"
